Updated stlye so I don't look like a complete scrub who doesn't know what I'm doing to the hordes of people who clone this bullshit eventually.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <head>
-	<script src="scripts/angular.min.js"></script>
-	<script src="scripts/jquery-1.11.1.min.js"></script>
-	<script src="scripts/angular-route.min.js"></script>
+	<script src="scripts/lib/angular.min.js"></script>
+	<script src="scripts/lib/jquery-1.11.1.min.js"></script>
+	<script src="scripts/lib/angular-route.min.js"></script>
+	<script src="scripts/lib/bootstrap.min.js"></script>
 	<script src="scripts/angular-ab-test.js"></script>
-	<script src="scripts/abtest.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<title>Angular AB Test</title>
+	<title>Angular A/B Test</title>
 </head>
-<body>
-	<div id="content" ng-app="abtest">
-		<header>
-			<span>Angular AB Test</span>
-			<ol>
+<body ng-app="abtest">
+	<nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+			<a class="navbar-brand" href="#">Angular A/B Test</a>
+		</div>
+		<div id="navbar" class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
 				<li><a href="#/example">Example</a></li>
 				<li><a href="#/documentation">Documentation</a></li>
-			</ol>
-		</header>
-		<div>
-			<ng-view>Loading...</ng-view>
+			</ul>
+        </div>
+      </div>
+    </nav>
+	<div class="container">
+		<ng-view>Loading...</ng-view>
 
-			<script type="text/ng-template" id="example.html">
-				<experiment name="sample-test" variant="a">
-					<p>a variation</p>
-				</experiment>
-				<experiment name="sample-test" variant="b">
-					<p>b variation</p>
-				</experiment>
-			</script>
+		<script type="text/ng-template" id="example.html">
+			<h1 class="page-header">Example</h1>
 
-			<script type="text/ng-template" id="documentation.html">
-				Documentation
-			</script>
-		</div>
+			<experiment name="sample-test" variant="a">
+				<p>a variation</p>
+			</experiment>
+			<experiment name="sample-test" variant="b">
+				<p>b variation</p>
+			</experiment>
+		</script>
+
+		<script type="text/ng-template" id="documentation.html">
+			<h1 class="page-header">Documentation</h1>
+
+			<p>Add an <code>&lt;experiment&gt;</code> tag like so:</p>
+				<pre>&lt;experiment name="sample-test" variant="a"&gt;
+	&lt;p&gt;a variation&lt;/p&gt;
+&lt;/experiment&gt;</pre>
+
+			<p>It will show if there's a value for `abtests` in your localStorage that happens to look like this:</p>
+
+			<code>[{"name":"sample-test","value":"a"}]</code>
+		</script>
 	</div>
 </body>
