--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<script src="scripts/lib/jquery-1.11.1.min.js"></script>
 	<script src="scripts/lib/angular-route.min.js"></script>
 	<script src="scripts/lib/bootstrap.min.js"></script>
+	<script src="scripts/main.js"></script>
 	<script src="scripts/angular-ab-test.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -15,10 +16,10 @@
         <div class="navbar-header">
 			<a class="navbar-brand" href="#">Angular A/B Test</a>
 		</div>
-		<div id="navbar" class="navbar-collapse collapse">
+		<div id="navbar" class="navbar-collapse collapse" ng-controller="HeaderController">
 			<ul class="nav navbar-nav">
-				<li><a href="#/example">Example</a></li>
-				<li><a href="#/documentation">Documentation</a></li>
+				<li ng-class="{ active: isActive('/example')}"><a href="#/example">Example</a></li>
+				<li ng-class="{ active: isActive('/documentation')}"><a href="#/documentation">Documentation</a></li>
 			</ul>
         </div>
       </div>
@@ -27,14 +28,26 @@
 		<ng-view>Loading...</ng-view>
 
 		<script type="text/ng-template" id="example.html">
-			<h1 class="page-header">Example</h1>
+			<div ng-init="load()">
+				<h1 class="page-header">Example</h1>
 
-			<experiment name="sample-test" variant="a">
-				<p>a variation</p>
-			</experiment>
-			<experiment name="sample-test" variant="b">
-				<p>b variation</p>
-			</experiment>
+				<div class="alert alert-info">If this is your first time here, you've automatically been placed into the 'a' variation for the experiment.  This would normally be set by Optimizely or SiteSpect or whatever other bullshit A/B testing framework your business people have tricked the company into using.</div>
+
+				<experiment name="sample-test" variant="a">
+					<p>a variation</p>
+					<button type="button" class="btn btn-default">
+						<span>Some lame-ass button</span>
+					</button>
+					<p>This button is boring as shit and I'd be completely surprised if anybody even clicked it.</p>
+				</experiment>
+				<experiment name="sample-test" variant="b">
+					<p>b variation</p>
+					<button type="button" class="btn btn-primary btn-lg">
+						<span>Holy shit, what a sick button</span>
+					</button>
+					<p>I don't even need an a/b test to know this button is killing it.</p>
+				</experiment>
+			</div>
 		</script>
 
 		<script type="text/ng-template" id="documentation.html">
