--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<title>Angular A/B Test</title>
+	<base href="/angular-ab-test/" />
 </head>
 <body ng-app="abtest">
 	<nav class="navbar navbar-default navbar-static-top">
