--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 </head>
 <body ng-app="abtest">
 	<nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-			<a class="navbar-brand" href="#">Angular A/B Test</a>
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Angular A/B Test</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse" ng-controller="HeaderController">
+				<ul class="nav navbar-nav">
+					<li ng-class="{ active: isActive('/example')}"><a href="#/example">Example</a></li>
+					<li ng-class="{ active: isActive('/documentation')}"><a href="#/documentation">Documentation</a></li>
+				</ul>
+			</div>
+			<a href="https://github.com/EricFreeman/angular-ab-test"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 		</div>
-		<div id="navbar" class="navbar-collapse collapse" ng-controller="HeaderController">
-			<ul class="nav navbar-nav">
-				<li ng-class="{ active: isActive('/example')}"><a href="#/example">Example</a></li>
-				<li ng-class="{ active: isActive('/documentation')}"><a href="#/documentation">Documentation</a></li>
-			</ul>
-        </div>
-      </div>
-    </nav>
+	</nav>
 	<div class="container">
 		<ng-view>Loading...</ng-view>
 
