Added isdefault attribute so if the test isn't setup yet in localstorage, then at least something shows up.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<button type="button" class="btn" ng-click="switchVariant('b')">Variant B</button>
 				</div>
 
-				<experiment name="sample-test" variant="a">
+				<experiment name="sample-test" variant="a" isdefault="true">
 					<p>a variation</p>
 					<button type="button" class="btn btn-default">
 						<span>Some lame-ass button</span>
