--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div ng-init="load()">
 				<h1 class="page-header">Example</h1>
 
-				<div class="alert alert-info">If this is your first time here, you've automatically been placed into the 'a' variation for the experiment.  This would normally be set by Optimizely or SiteSpect or whatever other A/B testing crap your business people have decided to use.</div>
+				<div class="alert alert-info">If this is your first time here, you've automatically been placed into the 'a' variation for the experiment.  This would normally be set by Optimizely or SiteSpect or whatever other A/B testing framework your business people have decided to use.</div>
 
 				<div class="page-header">
 					<button type="button" class="btn" ng-click="switchVariant('a')">Variant A</button>
