--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<title>Angular A/B Test</title>
 </head>
-<body ng-app="abtest">
+<body ng-app="mainApp">
 	<nav class="navbar navbar-default navbar-static-top">
 		<div class="container">
 			<div class="navbar-header">
