Fixed issue where it would break after calling addTest a second time.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 &lt;/experiment&gt;
 </pre>
 
-			<p>It will show the first experiment if there's a value for `abtests` in your localStorage that happens to look like this: <code>[{"name":"sample-test","value":"a"}]</code> or it will show the second one if the value is 'b', and so on and so forth.</p>
+			<p>It will show the first experiment if there's a value for <code>abtests</code> in your localStorage that happens to look like this: <code>[{"name":"sample-test","value":"a"}]</code> or it will show the second one if the value is 'b', and so on and so forth.</p>
 
 			<h4 class="page-header">Default experiment</h4>
 			<p>In case you want to release code before setting up the experiment, just set <code>isdefault="true"</code> on the experiment you want to show up if there's no entry for the test in localStorage.</p>
