Updated readme with installation instructions.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 
 			<p>Simple A/B testing directive because Optimizely is pretty rough at working with AngularJS projects.</p>
 
+			<h4 class="page-header">Installation</h4>
+			<code>npm install angular-ab-test</code> or <code>bower install angular-ab-test</code>
+
 			<h4 class="page-header">In Optimizely, SiteSpect<small>, or whatever else you're using I'm sure it'll probably work...</small></h4>
 
 			<p>Setup tests by calling handy helper methods like <code>window.addTest(testName, variant)</code> or <code>window.updateTest(testName, variant)</code>.</p>
